css style fixed modifying Z-index style to map and contact us section

--- a/style.css
+++ b/style.css
@@ -899,19 +899,20 @@ header {/*header container size*/
     bottom: -20px;
     box-shadow: inset 0 0 10px 30px white;
     border-radius: inherit;
-    z-index: -1;
 }
 .emailUsSection form {
     display: flex;
     flex-direction: column;
     max-width: 400px;
     padding-left: 20%;
+    z-index: 1;
 }
 .emailUsSection h3 {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
+    z-index: 1;
 }
 .emailUsSection label{
     padding: 3% 0 1% 0;
@@ -947,14 +948,18 @@ header {/*header container size*/
     bottom: -20px;
     box-shadow: inset 0 0 10px 30px white;
     border-radius: inherit;
-    z-index: -1;
 }
 .mapSection h3 {
     margin: 0;
     font-size: 20px;
+    z-index: 1;
 }
 .mapSection p {
     font-size: 12px;
+    z-index: 1;
+}
+.mapSection iframe {
+    z-index: 1;
 }
 
 /*Footer section*/
